hydroflow/tests/compile-fail/surface_loop_multiple_window.stderr
error: Operator input edge may not cross multiple loop contexts.
 --> tests/compile-fail/surface_loop_multiple_window.rs:6:22
  |
6 |                 a -> batch() -> null();
  |                      ^^^^^^^
